Various dependency upgrades following CAS 7.0